--- a/MVC/package.json
+++ b/MVC/package.json
@@ -14,6 +14,11 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "dependencies": {
+    "@types/express": "^5.0.3",
+    "express": "^5.1.0",
+    "pg-promise": "^12.1.3"
+  },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
     "@tsconfig/node22": "^22.0.2",
@@ -25,9 +30,5 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.43.0"
-  },
-  "dependencies": {
-    "@types/express": "^5.0.3",
-    "express": "^5.1.0"
   }
 }
