--- a/Attendants/Bartek/z1/package.json
+++ b/Attendants/Bartek/z1/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@types/express": "^5.0.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pg-promise": "^12.3.0"
   }
 }
