--- a/Attendants/Dima/mvc_z1/package.json
+++ b/Attendants/Dima/mvc_z1/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch -r ts-node/register --env-file=.env ./src/public/index/index.ts"
+    "dev": "node --watch -r ts-node/register --env-file=.env ./src/public/index/index.ts",
+    "lint": "eslint src/**/*.ts --fix"
   },
   "keywords": [],
   "author": "",
