--- a/Attendants/Dima/mvc_z1/tsconfig.json
+++ b/Attendants/Dima/mvc_z1/tsconfig.json
@@ -3,8 +3,10 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["ES2020", "DOM"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_module", "dist"]
+  
 }
